add better testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1"
+python = ">=3.9"
 ddsketch = "^3.0.1"
 
 
@@ -15,6 +15,7 @@ black = "^24.4.2"
 flake8 = "^7.1.0"
 pytest = "^8.3.2"
 isort = "^5.13.2"
+numpy = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
