--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "A streaming statistics library"
 authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+stats = "streaming_statistics.cli:main"
+
 [tool.poetry.dependencies]
 python = ">=3.9"
 ddsketch = "^3.0.1"
